--- a/index.html
+++ b/index.html
@@ -190,14 +190,15 @@
                 <h4>PLA-X - 친환경 가위, <br> 
                   미니 플라스틱 반납함 제작
                 </h4>
-                <p>소비자가 직접 모아 전달한 플라스틱 뚜껑을 새활용하여<br>
-                빨대 없이 멸균우유/음료를 음용할 수 있는<br>
+                <p>플라스틱 뚜껑을 새활용하여<br>
+                빨대 없이 음료를 음용할 수 있는<br>
                 친환경 가위 제작</p>
                 </div> <!--txt-->
               <div class="txt">
                 <h4>우유팩 수거 캠페인</h4>
                 <p>우유팩/멸균팩 분리배출 인식 제고<br>
-                  및 자원순환 확대 위한 우유팩수거함 제작/설치 지원</p>
+                  및 자원순환 확대 위한<br>
+                  우유팩수거함 제작/설치 지원</p>
                 </div> <!--txt-->
               <div class="txt">
                 <h4>폐소재 기부</h4>
@@ -254,7 +255,7 @@
               소중한 내 아기를 위해,<br>
               초지는 물론 인증받은 유기농 원료만을 고집합니다<br>
               (6개월 이후 ~ 첫돌)</p>
-            <a href="#">자세히보기</a>
+            <a href="#none">자세히보기</a>
           </div>
             <img src="images/product_1.png" alt="유기농 산양유아식">
         </div><!--img_count-->
@@ -262,17 +263,32 @@
       <div>
         <div class="img_count flex">
           <div class="slide_box1">
-            <h2>맛있는 우유 GT</h2>
-            <p>유기농 산양원유 사용!<br>
-              단 3% 미만만 한정생산되는<br>
-              초지는 물론 인증받은 유기농 원료만을 고집합니다,<br>
-              (6개월 이후 ~ 첫돌)<br>
-              소중한 내 아기를 위해(6개월 이후 ~ 첫돌)</p>
-            <a href="#">자세히보기</a>
+            <h2>드빈치 자유방목 유기농 치즈</h2>
+            <p>
+              오직! 흡수가 잘 되는 어린이 아기 맞춤 칼슘만 사용<br>
+              성장 단계별 step<br>
+              1단계 자기방어 (6개월~18개월)<br>
+              2단계 성장 (19개월~36개월)<br>
+              3단계 두뇌 (4세부터)</p>
+            <a href="#none">자세히보기</a>
             </div>
-            <img src="images/product_2.png" alt="맛있는 우유 GT">
+            <img src="images/product_2.png" alt="드빈치 자유방목 유기농 치즈">
         </div><!--img_count-->
       </div><!--2-->
+      <div>
+        <div class="img_count flex">
+          <div class="slide_box1">
+            <h2>맛있는 우유 GT</h2>
+            <p>
+              최상의 우유 맛을 찾아내기 위해<br>
+              갓 짜낸 우유의 참맛과<br>
+              신선함을 살리고 잡미와 잡내를 최대한 제거하는<br>
+              디테일한 설계가 바로 GT만의 노하우!</p>
+            <a href="#none">자세히보기</a>
+            </div>
+            <img src="images/product_3.png" alt="맛있는 우유 GT">
+        </div><!--img_count-->
+      </div><!--3-->
     </div><!--lazy slider-->
   </section>
   <section id="section5">
@@ -282,7 +298,7 @@
         <p>남양 無약정 가정배달 서비스<br>
           약정없이 간편하게<br>
           전상품 무료배송</p>
-        <a href="#">자세히보기</a>
+        <a href="#none">자세히보기</a>
       </div>
       <div class="employment">
         <h4>채용공고</h4>
@@ -290,7 +306,7 @@
           창의 인재 발굴! 핵심 인재 육성!<br>
           건강한 미래를 함께 할 <br>
           역량있는 인재를 찾습니다.</p>
-          <a href="#">자세히보기</a>
+          <a href="#none">자세히보기</a>
       </div>
     </div>
   </section>
@@ -299,31 +315,31 @@
       <div class="foot_top flex">
         <div class="flex">
           <div class="foot_txt1 flex">
-            <a href="#">이용약관</a>
-            <a href="#">개인정보처리방침</a>
-            <a href="#">이메일무단수집거부</a>
-            <a href="#">제휴문의</a>
+            <a href="#none">이용약관</a>
+            <a href="#none">개인정보처리방침</a>
+            <a href="#none">이메일무단수집거부</a>
+            <a href="#none">제휴문의</a>
           </div>
           <div class="foot_icon flex">
-            <a href="#"><span><img src="images/youtube_icon.png" alt="유튜브아이콘"></span></a>
-            <a href="#"><span><img src="images/facebook_icon.png" alt="페이스북아이콘"></span></a>
-            <a href="#"><span><img src="images/instagram_icon.png" alt="인스타그램아이콘"></span></a>
+            <a href="#none"><span><img src="images/youtube.png" alt="유튜브아이콘"></span></a>
+            <a href="#none"><span><img src="images/facebook.png" alt="페이스북아이콘"></span></a>
+            <a href="#none"><span><img src="images/instagram.png" alt="인스타그램아이콘"></span></a>
           </div>
         </div>
       </div> <!--top-->
       <div class="foot_bottom flex">
         <div class="foot_txt2">
-          <p>주소  서울시 강남구 도산대로 240, 1964빌딩 남양유업 ㈜</p>
-          <p>사업자등록번호   202-81-04367</p>
-          <p>대표이사 성명  이광범</p>
-          <p>개인정보보호책임자  남기현</p>
-          <p>통신판매업신고 서울강남 00873호</p>
+          <p>주소 | 서울시 강남구 도산대로 240, 1964빌딩 남양유업 ㈜</p>
+          <p>사업자등록번호 |  202-81-04367</p>
+          <p>대표이사 성명 | 이광범</p>
+          <p>개인정보보호책임자 | 남기현</p>
+          <p>통신판매업신고 | 서울강남 00873호</p>
           <p>COPYRIGHT©NAMYANG DAIRY PRODUCTS CO., LTD. ALL RIGHTS RESERVED</p>
         </div>
         <div class="foot_txt3 flex">
           <h4>고객센터</h4>
           <div>
-            <p>02-736-0872</p>
+            <a href="#none">02-736-0872</a>
             <p><b>상담시간</b>평일  9:00 ~ 18:00</p>
             <p><b>점심시간</b>11:45~12:45</p>
           </div>
@@ -353,11 +369,11 @@
     </div>
     <div class="namyangmall">
       <button class="mall_btn"><span><img src="images/namyangmall_logo.png" alt="남양몰"></span></button>
-      <img src="images/quick_namyangmall.jpg" alt="남양몰 배너" class="mall_on">
+      <a href="#none"><img src="images/quick_namyangmall.jpg" alt="남양몰 배너" class="mall_on"></a>
     </div>
     <div class="namyangi">
       <button class="i_btn"><span><img src="images/namyangi_logo.png" alt="남양아이"></span></button>
-      <img src="images/quick_namyangi.jpg" alt="남양아이 배너" class="i_on">
+     <a href="#none"><img src="images/quick_namyangi.jpg" alt="남양아이 배너" class="i_on"></a>
     </div>
     <button class="top_btn">위로가기</button>
   </div>
