--- a/index.html
+++ b/index.html
@@ -34,33 +34,33 @@
       <nav id="nav">
         <ul class="gnb flex">
           <li>
-            <a href="#">회사소개</a>
+            <a href="sub.html">회사소개</a>
             <ul class="depth2">
-              <li><a href="#">남양유업소개</a></li>
-              <li><a href="#">품질안전관리</a></li>
-              <li><a href="#">지속가능경영</a></li>
+              <li><a href="sub.html">남양유업소개</a></li>
+              <li><a href="sub.html">품질안전관리</a></li>
+              <li><a href="sub.html">지속가능경영</a></li>
             </ul><!--depth2끝-->
           </li><!--회사소개 끝-->
           <li>
-            <a href="#">제품</a>
+            <a href="sub.html">제품</a>
             <ul class="depth2">
-              <li><a href="#">우유/두유</a></li>
-              <li><a href="#">커피/음료</a></li>
-              <li><a href="#">발효유/치즈</a></li>
-              <li><a href="#">크림/버터</a></li>
-              <li><a href="#">건강식품</a></li>
-              <li><a href="#">아기용</a></li>
+              <li><a href="sub.html">우유/두유</a></li>
+              <li><a href="sub.html">커피/음료</a></li>
+              <li><a href="sub.html">발효유/치즈</a></li>
+              <li><a href="sub.html">크림/버터</a></li>
+              <li><a href="sub.html">건강식품</a></li>
+              <li><a href="sub.html">아기용</a></li>
             </ul><!--depth2끝-->
           </li><!--제품 끝-->
           <li>
-            <a href="#">홍보센터</a>
+            <a href="sub.html">홍보센터</a>
             <ul class="depth2">
-              <li><a href="#">남양뉴스</a></li>
-              <li><a href="#">영상관</a></li>
+              <li><a href="sub.html">남양뉴스</a></li>
+              <li><a href="sub.html">영상관</a></li>
             </ul><!--depth2끝-->
           </li><!--홍보센터 끝-->
           <li>
-            <a href="#">고객상담센터</a>
+            <a href="sub.html">고객상담센터</a>
           </li><!--고객상담센터 끝-->
         </ul>
       </nav>
