--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
           <textarea placeholder="내용을 입력해주세요."></textarea>
         </div>
         <button>제출하기</button>
+        <img src="images/x.png" alt="x아이콘">
       </div>
     </div>
     <div class="namyangmall">
