--- a/index.html
+++ b/index.html
@@ -221,18 +221,18 @@
           ‘<span>함께</span>’ 건강하고 행복한  사회적 가치 실현</p>
       </div>
         <div class="icon_box flex">
-          <div>
+          <div class="icon_wrap">
             <p class=icon><span><img src="images/care_cure_icon1.png" alt="나눔"></span></p>
             <p class="txt">건강하고 안전한<br>
               물품 나눔</p>
           </div>
-          <div>
+          <div class="icon_wrap">
             <p class=icon><span><img src="images/care_cure_icon2.png" alt="동행"></span></p>
             <p class="txt">임신/육아정보 공유<br>
               / 취약계층아동<br>
               결식예방 및 돌봄공백 해소</p>
           </div>
-          <div>
+          <div class="icon_wrap">
             <p class=icon><span><img src="images/care_cure_icon3.png" alt="희망"></span></p>
             <p class="txt">소수의 환아를 위한<br>
               지속적인 노력</p>
