--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <script src="js/language.js"></script>
 <script src="js/quick.js"></script>
 <script src="js/lazy.js"></script>
+<script src="js/m_nav.js"></script>
 
 <script src="./js/slick.js" type="text/javascript" charset="utf-8"></script>
 
@@ -63,6 +64,45 @@
             <a href="sub.html">고객상담센터</a>
           </li><!--고객상담센터 끝-->
         </ul>
+      </nav>
+      <nav id="m_nav">
+        <div id="popup_nav">
+          <div class="LeftWrap">
+              <a href="#none" class="close1">X</a>
+          
+              <div id="wrap_head">
+                <ul id="btn1">
+                   <li><a href="#">회사소개</a>
+                       <ul class="m_sub">
+                         <li><a href="sub.html">남양유업소개</a></li>
+                         <li><a href="sub.html"></a>품질안전관리</li>
+                         <li><a href="sub.html"></a>지속가능경영</li>
+                       </ul>
+                   </li>
+                   <li><a href="#">제품</a>
+                       <ul class="m_sub">
+                         <li><a href="sub.html">우유/두유</a></li>
+                         <li><a href="sub.html">커피/음료</a></li>
+                         <li><a href="sub.html">발효유/치즈</a></li>
+                         <li><a href="sub.html">크림/버터</a></li>
+                         <li><a href="sub.html">건강식품</a></li>
+                         <li><a href="sub.html">아기용</a></li>
+                      </ul>
+                   </li>
+                   <li><a href="#">홍보센터</a>
+                       <ul class="m_sub">
+                         <li><a href="sub.html">남양뉴스</a></li>
+                         <li><a href="sub.html">영상관</a></li>
+                      </ul>
+                   </li>
+                   <li><a href="#">고객상담센터</a>
+                   </li>
+                </ul>
+              </div>
+          </div>
+          </div>
+          <a href="#none" class="open1"><span></span><span></span><span></span></a>
+          
       </nav>
       <div class="flex">
         <div class="language">
@@ -109,10 +149,10 @@
   </section>
   
   <section id="section1" class="inner">
-    <h1 class="title"><b>남양유업은</b> 
+    <h2 class="title"><b>남양유업은</b> 
       <b><span>인간존중</span>을 바탕으로</b>
-      <b><span>인류 건강증진</span> 에 기여하는</b>
-      신뢰받는 기업이 될 것입니다</h1>
+      <b><span>인류 건강증진</span>에 기여하는</b>
+      신뢰받는 기업이 될 것입니다</h2>
       <div class="sec1_list_pc flex">
         <div class="sec1_img">
           <img src="images/ideology_contentment.jpg" alt="고객만족">
@@ -134,10 +174,10 @@
   <section id="section2" class="inner">
     <div class="flex">
         <div class="left_tit">
-          <h4>
+          <h2>
             환경캠페인
           <b>‘<span>Save the Earth</span>’</b>
-          </h4>
+          </h2>
           <p>남양유업은 친환경 Green 경영방침 아래<br> 
             우리 모두 안전한 지구를 만들기 위한<br>
             ‘Save the Earth’ 활동들을 펼쳐 나가겠습니다.</p>
@@ -242,9 +282,10 @@
   </section>
   <section id="banner">
     <a href="#none"><img src="images/banner.jpg" alt="여름특별할인쿠폰"></a>
+    <a href="#none"><img src="images/banner_mobile.jpg" alt="여름특별할인쿠폰"></a>
   </section>
   <section id="section4" class="inner">
-    <h2>여러분들의 <span>건강</span>을 책임질 남양의 제품들 입니다.</h2>
+    <h2><b>여러분들의 <span>건강</span>을 책임질 </b>남양의 제품들 입니다.</h2>
     <div class="lazy slider" data-sizes="50vw">
       <div>
         <div class="img_count flex">
