--- a/sub.html
+++ b/sub.html
@@ -15,6 +15,7 @@
 
     <script src="js/header_scroll.js"></script>
     <script src="js/quick.js"></script>
+    <script src="js/m_nav.js"></script>
 </head>
 <body>
 <header id="sub_header">
@@ -52,6 +53,45 @@
             <a href="sub.html">고객상담센터</a>
           </li><!--고객상담센터 끝-->
         </ul>
+      </nav>
+      <nav id="m_nav">
+        <div id="popup_nav">
+          <div class="LeftWrap">
+              <a href="#" class="close1">X</a>
+          
+              <div id="wrap_head">
+                <ul id="btn1">
+                   <li><a href="#">회사소개</a>
+                       <ul class="m_sub">
+                         <li><a href="sub.html">남양유업소개</a></li>
+                         <li><a href="sub.html"></a>품질안전관리</li>
+                         <li><a href="sub.html"></a>지속가능경영</li>
+                       </ul>
+                   </li>
+                   <li><a href="#">제품</a>
+                       <ul class="m_sub">
+                         <li><a href="sub.html">우유/두유</a></li>
+                         <li><a href="sub.html">커피/음료</a></li>
+                         <li><a href="sub.html">발효유/치즈</a></li>
+                         <li><a href="sub.html">크림/버터</a></li>
+                         <li><a href="sub.html">건강식품</a></li>
+                         <li><a href="sub.html">아기용</a></li>
+                      </ul>
+                   </li>
+                   <li><a href="#">홍보센터</a>
+                       <ul class="m_sub">
+                         <li><a href="sub.html">남양뉴스</a></li>
+                         <li><a href="sub.html">영상관</a></li>
+                      </ul>
+                   </li>
+                   <li><a href="#">고객상담센터</a>
+                   </li>
+                </ul>
+              </div>
+          </div>
+          </div>
+          <a href="#" class="open1"><span></span><span></span><span></span></a>
+          
       </nav>
       <div class="flex">
         <div class="language">
@@ -103,6 +143,7 @@
     <section id="section3">
       <h2 class="sec3_tit">남양유업의 ESG</h2>
       <img src="images/sub_pc.png" alt="남양유업 ESG 설명" class="circle_txt">
+      <img src="images/sub_mob.png" alt="남양유업 ESG 설명" class="circle_txt">
     </section>
     <section id="section4">
       <h2 class="sec4_tit">ESG 평가 결과</h2>
@@ -239,6 +280,7 @@
           <textarea placeholder="내용을 입력해주세요."></textarea>
         </div>
         <button>제출하기</button>
+        <img src="images/x.png" alt="x아이콘">
       </div>
     </div>
     <div class="namyangmall">
