--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <script src="js/quick.js"></script>
 <script src="js/lazy.js"></script>
 <script src="js/m_nav.js"></script>
-<script src="js/img.js"></script>
 
 <script src="./js/slick.js" type="text/javascript" charset="utf-8"></script>
 
@@ -69,7 +68,7 @@
       <nav id="m_nav">
         <div id="popup_nav">
           <div class="LeftWrap">
-              <a href="#" class="close1">X</a>
+              <a href="#none" class="close1">X</a>
           
               <div id="wrap_head">
                 <ul id="btn1">
@@ -102,7 +101,7 @@
               </div>
           </div>
           </div>
-          <a href="#" class="open1"><span></span><span></span><span></span></a>
+          <a href="#none" class="open1"><span></span><span></span><span></span></a>
           
       </nav>
       <div class="flex">
@@ -283,6 +282,7 @@
   </section>
   <section id="banner">
     <a href="#none"><img src="images/banner.jpg" alt="여름특별할인쿠폰"></a>
+    <a href="#none"><img src="images/banner_mobile.jpg" alt="여름특별할인쿠폰"></a>
   </section>
   <section id="section4" class="inner">
     <h2><b>여러분들의 <span>건강</span>을 책임질 </b>남양의 제품들 입니다.</h2>
