--- a/sub.html
+++ b/sub.html
@@ -16,7 +16,6 @@
     <script src="js/header_scroll.js"></script>
     <script src="js/quick.js"></script>
     <script src="js/m_nav.js"></script>
-    <script src="js/img.js"></script>
 </head>
 <body>
 <header id="sub_header">
@@ -144,6 +143,7 @@
     <section id="section3">
       <h2 class="sec3_tit">남양유업의 ESG</h2>
       <img src="images/sub_pc.png" alt="남양유업 ESG 설명" class="circle_txt">
+      <img src="images/sub_mob.png" alt="남양유업 ESG 설명" class="circle_txt">
     </section>
     <section id="section4">
       <h2 class="sec4_tit">ESG 평가 결과</h2>
