--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
     <div class="inner">
       <div class="sec3_tit">
         <h2 class="title"> Care & Cure</h2>
-        <p>소외받는 이웃과 지역사회를 <span>Care</span>하고, <span>Cure</span>하여 <br>
-          ‘<span>함께</span>’ 건강하고 행복한  사회적 가치 실현</p>
+        <p><b>소외받는 이웃과 지역사회를</b> <span>Care</span>하고, <span>Cure</span>하여 <br>
+          ‘<span>함께</span>’ 건강하고 행복한  <b>사회적 가치 실현</b></p>
       </div>
         <div class="icon_box flex">
           <div class="icon_wrap">
