--- a/sub.html
+++ b/sub.html
@@ -57,7 +57,7 @@
       <nav id="m_nav">
         <div id="popup_nav">
           <div class="LeftWrap">
-              <a href="#" class="close1">X</a>
+              <a href="#none" class="close1">X</a>
           
               <div id="wrap_head">
                 <ul id="btn1">
@@ -90,7 +90,7 @@
               </div>
           </div>
           </div>
-          <a href="#" class="open1"><span></span><span></span><span></span></a>
+          <a href="#none" class="open1"><span></span><span></span><span></span></a>
           
       </nav>
       <div class="flex">
@@ -108,7 +108,7 @@
       </div>
     </div>
   </header>
-  <div class="inner">
+
     <section id="main_tit">
       <img src="images/sub_main.jpg" alt="지속가능경영 사진">
       <h1>지속가능경영</h1>
@@ -117,6 +117,7 @@
         <p><span>·</span>회사소개<span>·</span>지속가능경영</p>
       </div>
     </section>
+    <div class="inner">
     <section id="section1">
       <div class="esg">
         <img src="images/ESG.png" alt="ESG 글씨">
