--- a/sub.html
+++ b/sub.html
@@ -154,10 +154,10 @@
         <table border="0">
           <tr>
             <th>평가년도</th>
-            <th>ESG 통합 등급</th>
-            <th>E (환경)</th>
-            <th>S (사회)</th>
-            <th>G (지배구조)</th>
+            <th><b>ESG</b> 통합등급</th>
+            <th>E <b> (환경)</b></th>
+            <th>S <b> (사회)</b></th>
+            <th>G <b> (지배구조)</b></th>
           </tr>
           <tr>
             <td>2021년</td>
